# Project3

./: AvlTree.h  CMakeLists.txt  IndexHandler.cpp  IndexHandler.h  README.md  article.h  documentParser.cpp  documentParser.h  documentation.md  main.cpp  porter2_stemmer.cpp  porter2_stemmer.h  queryPro.cpp  queryPro.h  rapidJSONExample.cpp  relevancyRanking.cpp  relevancyRanking.h  test.cpp  userInterface.cpp  userInterface.h
